# simple-webserver

./: .gitignore  README.md  k6_script.js  locustfile.py
c++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  simple-webserver
c++/public/: 20.html  5.html  hafizh.html  restu.html
c++/src/: main.cc
js/: Makefile  app.js  package-lock.json  package.json
js/public/: onel.html
